ajustes de compatibilidad